--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ body {
   margin: 0;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
     sans-serif;
-  background: #0f172a;
+  background: #343434;
   color: #e5e7eb;
 }
 
@@ -18,7 +18,7 @@ body {
 .app-header {
   padding: 1.5rem 1rem;
   text-align: center;
-  background: #020617;
+  background: #000000;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.6);
 }
 
@@ -42,14 +42,14 @@ body {
 }
 
 .text-muted {
-  color: #9ca3af;
+  color: #fff200;
 }
 
 /* Barra de búsqueda */
 
 .BarraBusq {
   width: 100%;
-  margin: 2rem 0;
+  margin: 2rem 0; 
 }
 
 .form1 {
@@ -65,19 +65,19 @@ body {
   border-radius: 10px;
   font-size: 18px;
   outline: none;
-  background: rgba(15, 23, 42, 0.8);
-  color: #e5e7eb;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.4);
+  background: rgba(72, 72, 72, 0.8);
+  color: #000000;
+  box-shadow: 0 2px 8px rgba(255, 255, 255, 0.4);
   transition: box-shadow 0.3s ease, background-color 0.3s ease;
 }
 
 .form1 > input::placeholder {
-  color: #6b7280;
+  color: #000000;
 }
 
 .form1 > input:focus {
-  box-shadow: 0 4px 16px rgba(59, 130, 246, 0.6);
-  background-color: rgba(15, 23, 42, 1);
+  box-shadow: 0 4px 16px rgba(255, 255, 255, 0.6);
+  background-color: rgb(143, 143, 143);
 }
 
 /* Botones */
@@ -86,7 +86,7 @@ body {
   padding: 10px 17px;
   border-radius: 10px;
   border: 1px solid black;
-  background-color: #0f172a;
+  background-color: #baac5a;
   color: #f9fafb;
   cursor: pointer;
   font-size: 18px;
@@ -96,8 +96,8 @@ body {
 }
 
 .botonBusqueda:hover {
-  background-color: #1d4ed8;
-  border-color: #93c5fd;
+  background-color: #d8c81d;
+  border-color: #ffff00;
 }
 
 .botonBusqueda:active {
@@ -126,14 +126,14 @@ body {
 }
 
 .btn-fav {
-  background: #0f172a;
+  background: #424242;
   color: #f9fafb;
-  border: 1px solid #334155;
+  border: 1px solid #3c3c3c;
 }
 
 .btn-fav:hover {
-  background: #1d4ed8;
-  border-color: #93c5fd;
+  background-color: #d8c81d;
+  border-color: #ffff00;
 }
 
 /* Listado de series */
@@ -146,7 +146,7 @@ body {
 }
 
 .show-card {
-  background: #020617;
+  background: #171502;
   border-radius: 12px;
   padding: 0.75rem;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.6);
@@ -183,7 +183,7 @@ body {
 .modal-backdrop {
   position: fixed;
   inset: 0;
-  background: rgba(15, 23, 42, 0.8);
+  background: rgba(42, 39, 15, 0.8);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -191,7 +191,7 @@ body {
 }
 
 .modal-content {
-  background: #020617;
+  background: #171502;
   border-radius: 16px;
   max-width: 800px;
   width: 90%;
@@ -206,7 +206,7 @@ body {
   right: 0.75rem;
   border: none;
   background: transparent;
-  color: #9ca3af;
+  color: #afad9c;
   font-size: 1.3rem;
   cursor: pointer;
 }
