--- a/src/index.css
+++ b/src/index.css
@@ -15,11 +15,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #fffc64;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #eaf253;
 }
 
 body {
@@ -47,7 +47,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #fcff64;
 }
 button:focus,
 button:focus-visible {
@@ -56,11 +56,11 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
+    color: #474621;
     background-color: #ffffff;
   }
   a:hover {
-    color: #747bff;
+    color: #fffa74;
   }
   button {
     background-color: #f9f9f9;
